--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 body {
+    font-family: Lato, Arial, sans-serif;
     position: relative;
     margin:0;
 }
 
 @font-face {
-    font-family: "BigJohn";
+    font-family: "BigJohn", Arial, sans-serif;
     src: url("../fonts/BigJohn.otf");
 }
 
 @font-face {
-    font-family: "SlimJoe";
+    font-family: "SlimJoe", Arial, sans-serif;
     src: url("../fonts/Slim+Joe.otf");
 }
 
@@ -17,10 +18,12 @@ body {
     height: 650px;
     width: 100%;
     background-image: url("../img/computer.png");
-    padding-top: 150px;
+    padding-top: 290px;
 }
 
 .main-header {
+    display:flex;
+    justify-content: space-between;
     position: absolute;
     width: 100%;
     left: 0;
@@ -36,15 +39,79 @@ body {
 }
 
 .main-navigation {
+    font-family: Lato, Arial, sans-serif;
+    display: flex;
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+nav {
+    margin-top: 33px;
+}
+
+.nav-link {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    margin-right: -67px;
+}
+
+.nav-item:last-child .nav-link::after {
+    content: "";
+}
+
+.nav-link::after {
+    content: "/";
+    position: absolute;
+    right: 0;
+}
+
+.nav-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 160px;
 }
 
 .hero h2 {
+    font-family: "BigJohn", Arial, sans-serif;
+    font-size: 46px;
+    color: white;
     margin: 0;
+    margin-left: -2px;
 }
 
 .container {
+    text-align: center;
     max-width: 1140px;
     margin: 0 auto;
+}
+
+.info {
+    font-family: "SlimJoe", Arial, sans-serif;
+    font-size: 28px;
+    color: white;
+    opacity: 0.5;
+    letter-spacing: 1.3px;
+    margin-left: -36px;
+    margin-top: 16px;
+    margin-bottom: 51px;
+}
+
+.container-link {
+    font-family: Lato, Arial, sans-serif;
+    font-size: 14px;
+    color: green;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 2px solid green;
+    border-radius: 3px;
+    padding: 10px 20px 10px 24px;
+}
+
+.logo-link {
+    margin-top: 36px;
 }
