--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,47 @@ nav {
 .logo-link {
     margin-top: 36px;
 }
+
+.portfolio-menu {
+    text-align: center;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
+.menu-item {
+    display: inline-block;
+    list-style: none;
+}
+
+.images {
+    width: 1140px;
+}
+
+.image-wrapper-one {
+    display: inline-block;
+    float: left;
+    width: 38%;
+}
+
+.image-wrapper-two {
+    display: inline-block;
+    float: right;
+    width: 58%;
+}
+
+.image-wrapper-three {
+    display: inline-block;
+    float: left;
+    width: 38%;
+}
+
+.image-wrapper-four {
+    display: inline-block;
+    float: right;
+    width: 58%;
+}
+
+.text {
+    text-decoration: none;
+    font-size: 26px;
+}
